--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,13 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+
+#IMAGENES USADAS
+https://github.com/JuanOrtiz-cep/Laboratorio1-Se-ales/blob/main/RUIDO%20GAUS%201.jpg
+https://github.com/JuanOrtiz-cep/Laboratorio1-Se-ales/blob/main/Ruido%20Gaus%202.jpg
+https://github.com/JuanOrtiz-cep/Laboratorio1-Se-ales/blob/main/Ruido%20impulso%201.jpg
+https://github.com/JuanOrtiz-cep/Laboratorio1-Se-ales/blob/main/Ruido%20impulso%202.jpg
+https://github.com/JuanOrtiz-cep/Laboratorio1-Se-ales/blob/main/Se%C3%B1alFisiologica(original).jpeg
+https://github.com/JuanOrtiz-cep/Laboratorio1-Se-ales/blob/main/c83aa23a-1271-442d-a241-1e4a1e78adaa.jpg
+https://github.com/JuanOrtiz-cep/Laboratorio1-Se-ales/blob/main/Funcion%20probabilidad.jpg
+https://github.com/JuanOrtiz-cep/Laboratorio1-Se-ales/blob/main/155112a9-58bf-45c5-82b3-6cde9e2dfb59.jpg
